--- a/src/utils/RootDiv.module.css
+++ b/src/utils/RootDiv.module.css
@@ -13,7 +13,7 @@
     min-height: 100vh;
     background: url('../../public/background.jpg') no-repeat;
     background-size: cover;
-    /*background-position: center;*/
+    background-position: center;
 }
 
 /*.ant-input {*/
